# serde-snippets

./: Cargo.toml  README.md
src/: main.rs  separator.rs  wide2ascii.rs
