[package]
name = "serde-snippets"
version = "0.1.0"
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.41"
unicode-jp = "0.4.0"
